src/mmgroup/dev/mat24/mat24_functions.pxd

# This .pxd file has been generated automatically. Do not edit!


from libc.stdint cimport uint32_t, uint16_t, uint8_t


cdef extern from "mat24_functions.h":
    uint32_t mat24_lsbit24(uint32_t v1)
    uint32_t mat24_bw24(uint32_t v1)
    uint32_t mat24_vect_to_bit_list(uint32_t v1, uint8_t *a_out)
    uint32_t mat24_extract_b24(uint32_t v1, uint32_t u_mask)
    uint32_t mat24_spread_b24(uint32_t v1, uint32_t u_mask)
    uint32_t mat24_vect_to_vintern(uint32_t v1)
    uint32_t mat24_vintern_to_vect(uint32_t v1)
    uint32_t mat24_vect_to_cocode(uint32_t v1)
    uint32_t mat24_gcode_to_vect(uint32_t v1)
    uint32_t mat24_cocode_to_vect(uint32_t c1)
    uint32_t mat24_vect_to_gcode(uint32_t v1)
    uint32_t mat24_gcode_to_octad(uint32_t v1)
    uint32_t mat24_vect_to_octad(uint32_t v1)
    uint32_t mat24_octad_to_gcode(uint32_t u_octad)
    uint32_t mat24_octad_to_vect(uint32_t u_octad)
    uint32_t mat24_cocode_syndrome(uint32_t c1, uint32_t u_tetrad)
    uint32_t mat24_syndrome(uint32_t v1, uint32_t u_tetrad)
    uint32_t mat24_gcode_weight(uint32_t v1)
    uint32_t mat24_cocode_weight(uint32_t c1)
    uint32_t mat24_scalar_prod(uint32_t v1, uint32_t c1)
    uint32_t mat24_suboctad_to_cocode(uint32_t u_sub, uint32_t v1)
    uint32_t mat24_cocode_to_suboctad(uint32_t c1, uint32_t v1)
    uint32_t mat24_suboctad_weight(uint32_t u_sub)
    uint32_t mat24_suboctad_scalar_prod(uint32_t u_sub1, uint32_t u_sub2)
    uint32_t mat24_ploop_theta(uint32_t v1)
    uint32_t mat24_ploop_cocycle(uint32_t v1, uint32_t v2)
    uint32_t mat24_mul_ploop(uint32_t v1, uint32_t v2)
    uint32_t mat24_pow_ploop(uint32_t v1, uint32_t u_exp)
    uint32_t mat24_ploop_comm(uint32_t v1, uint32_t v2)
    uint32_t mat24_ploop_cap(uint32_t v1, uint32_t v2)
    uint32_t mat24_ploop_assoc(uint32_t v1, uint32_t v2, uint32_t v3)
    uint32_t mat24_perm_complete_heptad(uint8_t *p_io)
    uint32_t mat24_perm_check(uint8_t *p1)
    uint32_t mat24_perm_from_heptads(uint8_t *h1, uint8_t *h2, uint8_t *p_out)
    uint32_t mat24_m24num_to_perm(uint32_t u_m24, uint8_t *p_out)
    uint32_t mat24_perm_to_m24num(uint8_t  *p1)
    void mat24_perm_to_matrix(uint8_t  *p1, uint32_t *m_out)
    void mat24_matrix_to_perm(uint32_t *m1, uint8_t *p_out)
    uint32_t mat24_op_vect_perm(uint32_t v1, uint8_t *p1)
    uint32_t mat24_op_gcode_matrix(uint32_t v1, uint32_t *m1)
    uint32_t mat24_op_gcode_perm(uint32_t v1, uint8_t *p1)
    uint32_t mat24_op_cocode_perm(uint32_t c1, uint8_t *p1)
    void mat24_mul_perm(uint8_t *p1, uint8_t *p2, uint8_t *p_out)
    void mat24_inv_perm(uint8_t *p1, uint8_t *p_out)
    void mat24_autpl_set_qform(uint32_t *m_io)
    void mat24_perm_to_autpl(uint32_t c1, uint8_t *p1, uint32_t *m_out)
    void mat24_cocode_to_autpl(uint32_t c1, uint32_t *m_out)
    void mat24_autpl_to_perm(uint32_t *m1, uint8_t  *p_out)
    uint32_t mat24_autpl_to_cocode(uint32_t *m1)
    uint32_t mat24_op_ploop_autpl(uint32_t v1, uint32_t *m1)
    void mat24_mul_autpl(uint32_t *m1, uint32_t *m2, uint32_t *m_out)
    void mat24_inv_autpl(uint32_t *m1, uint32_t *m_out)
    void mat24_perm_to_iautpl(uint32_t c1, uint8_t *p1, uint8_t *p_o, uint32_t *m_o)
    void mat24_perm_to_net(uint8_t *p1, uint32_t *a_out)
    void mat24_op_all_autpl(uint32_t *m1, uint16_t *a_out)
    void mat24_op_all_cocode(uint32_t c1, uint8_t *a_out)
